--- a/02/hw01.html
+++ b/02/hw01.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson 2</title>
+    <title>HW html</title>
 </head>
 <body>
     <h1>
-        Hello 2 Lesson
-        <!-- git instalations and adding repository -->
+        Home work
     </h1>
+    
 </body>
 </html>
