--- a/02/hw01.html
+++ b/02/hw01.html
@@ -3,12 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HW html</title>
+    <title>HW-Pikachu-html</title>
 </head>
 <body>
-    <h1>
-        Home work
+    <h1 id="Beginning of the page"> 
+        <pre>Home Work<br>         Пікачу</pre>
     </h1>
-    
+    <p>
+        <b>Пікачу</b> <em>(яп. ピカチュウ, МФА: [pikat͡ɕuː])</em> — персонаж творів під брендом «Покемон». Належить до покемонів першого покоління і має порядковий номер 025 зі 151 цього покоління і 1008 усіх девяти на 2022 рік. 
+        <br>Його ім'я перекладається з японської як грозова миша, адже це подібний на гризуна покемон електричного типу. Вперше він з'являється у відеоіграх компанії Nintendo в 1996 році, а також в однойменному мультсеріалі. Завдяки аніме це найвідоміший і найпопулярніший з усіх покемонів.  
+    </p>
+    <h2>
+        Загальна характеристика
+    </h2>
+    <p>
+        Пікачу — це невеличкий осадкуватий мишоподібний покемон із коротким жовтим хутром,, що має довгі вуха, чорні на кінцях, ймовірно він був створений на образі пискусі. На спині він має дві коричневі смуги і початок хвоста теж коричневий. Хвіст має форму блискавки з прямим кінцем у самців та із серцеподібним у самиць. На щоках у Пікачу червоні кола, які розташовані прямо над електричними мішками, які в свою чергу  — за щоками. У них Пікачу накопичує електроенергію, щоб потім використовувати, наприклад, для збивання блискавками плодів з дерев. При накопиченні великої кількості електрики мішки починають іскрити. Якщо її не буде звільнено, то покемон може захворіти,що було показано в серії,де Магнемайт почав слідкувати за Пікачу,щоб зарядитись. Якщо ж зібрати декілька Пікачу в одному місці, то вони можуть призвести до порушення подачі електрики або розпочати невеличку грозу.
+        <br>В цілому це веселий і кмітливий покемон, але він може бути недовірливим до свого власника. Принаймні деякі Пікачу мають клаустрофобію, через яку цей покемон не може знаходитись у покеболі, що ускладнює його утримання. <em>Пікачу — <b>це друга форма еволюції з Пічу</b>, що може перетворитись на Райчу за допомогою Грозового каменя еволюції. Зріст покемона приблизно 40 см, а вага 5,8 — 6 кг. Мешкають Пікачу в лісах, але намагаються наближатися до людських осель</em>. Мають вразливість до атак земляних покемонів.  
+    </p>
+    <em>
+        <a href="https://uk.wikipedia.org/wiki/%D0%9F%D1%96%D0%BA%D0%B0%D1%87%D1%83">
+            Original source: Hyperlink
+        </a> <!--- Взято з Вікіпедії-->
+        <br><a href="https://uk.wikipedia.org/wiki/%D0%9F%D1%96%D0%BA%D0%B0%D1%87%D1%83" target="_blank">
+            Open link source in a NEW TAB
+        </a>
+    </em>
+    <h2>
+        Contact Information:
+        <a href="mailto:witalikgp@gmail.com">
+            <p>
+                Email: witalikgp@gmail.com
+            </p>
+            
+        </a>
+        <a href="tel:+38576234234">
+            <p>
+                Phone number: +38 576 234 234
+            </p>
+        </a>
+    </h2>
+    <!-- test for navigation buttons below -->
+
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda praesentium eaque enim cum soluta dignissimos, libero provident? Aliquid, iusto, in quasi omnis quisquam dolorem possimus reiciendis numquam voluptatum impedit vitae fugiat laudantium consequatur sequi illo, officia tempora hic totam saepe deleniti sunt quod et eaque. Maxime qui amet voluptate officiis enim odio tempore nobis odit. Quibusdam inventore, rerum quo sed temporibus esse? Quam laudantium autem culpa, ut odio enim? Quasi molestias repudiandae maiores fugiat alias ipsam distinctio accusamus aspernatur hic sequi et commodi illum, quos quaerat rerum provident reiciendis culpa excepturi, eveniet porro at unde, mollitia voluptates rem! Magnam ab aliquid ratione quasi possimus sed voluptates provident corporis, nobis adipisci inventore dolorem, tempore cum id, odio suscipit error aspernatur officiis temporibus. Voluptatibus, vel ducimus? Quisquam cum temporibus quidem! Odit, possimus eius? Quaerat, nulla? Saepe, autem magni! Sed quibusdam officia dicta et veniam molestiae consequuntur distinctio eum harum facere. Magnam reprehenderit amet assumenda ullam omnis corrupti quaerat. Excepturi beatae vero, atque natus voluptas impedit laborum voluptatem quam quasi incidunt? Ad quasi reiciendis suscipit nihil cumque dolor, ut enim, delectus, ea commodi maxime dolorem? Accusamus praesentium nam optio officiis reiciendis ad, voluptas officia voluptatibus libero dolorem qui facilis possimus, repudiandae in quis hic odio enim quidem, quibusdam accusantium ratione? Et reprehenderit perferendis tenetur similique dignissimos ab provident porro! Quisquam architecto illum autem iure facere cum, corporis laudantium nihil numquam recusandae voluptatem perspiciatis quibusdam cupiditate iste fugit consequatur, pariatur ab accusantium, sed impedit? Deleniti accusamus natus possimus? Recusandae, rerum possimus rem fugiat quod minima porro error provident id facilis tempora expedita temporibus, voluptate vero harum aspernatur eos eum. Aspernatur velit necessitatibus delectus aperiam iure repellendus optio odio quas distinctio eum beatae aliquid, nostrum quos, voluptatibus nisi autem. Consequuntur possimus minus ab ullam facilis voluptatibus amet, aut corporis quibusdam eaque consectetur rem similique vel suscipit, laudantium inventore blanditiis enim ducimus a! Dignissimos necessitatibus doloribus deserunt maiores voluptatibus provident in alias modi quisquam aliquam iusto similique, numquam tenetur molestias, quasi dolorem laboriosam, nisi vero a fuga? Vero iusto officiis quis quae repellendus, minima obcaecati quo repudiandae eveniet nulla. Voluptatum, nam, non placeat iure esse quod harum quis provident fuga sunt voluptate voluptates minima iste ut neque quidem sapiente a dolore quas ad! Minima deleniti corporis eaque totam molestiae cupiditate, maxime natus ducimus, in iure neque inventore, quod recusandae vero perferendis facere. Incidunt non, iusto, eius aperiam aliquid deserunt earum, assumenda sed consequuntur reiciendis fugiat! Soluta nihil alias modi veniam eveniet obcaecati dicta. Deserunt harum minus doloremque architecto in ipsum atque veritatis non, accusamus beatae quasi et temporibus laudantium deleniti vitae labore saepe repellendus? Dolores maxime ex at laboriosam fugit repellat, debitis rerum tempora, distinctio quo cumque voluptate repudiandae aspernatur recusandae delectus ea? Eum itaque sapiente fugit delectus facere praesentium cum voluptate dolorum quae? Tempora minima quas dignissimos voluptatibus totam et recusandae, voluptate reprehenderit modi ea suscipit praesentium ducimus quo architecto reiciendis, quis officiis. Aspernatur accusamus eos incidunt. Cumque officiis similique impedit omnis beatae ut voluptates hic! Velit eius tenetur et. Nostrum labore voluptatem deserunt temporibus.
+    <br>
+    <a href="">
+        Beginning of the page
+    </a>
+
 </body>
 </html>
