--- a/02/next.html
+++ b/02/next.html
@@ -10,5 +10,25 @@
         Hello 2 Lesson
         <!-- git instalations and adding repository -->
     </h1>
+    <p>
+        H2O 
+        <!-- without formatting -->
+        <br> H<sub>2</sub>O  <!--with sub teg-->
+    </p>
+    <p>
+        Mathematics  333<sup><b>333</b></sup>
+    </p>
+
+    <p>
+        <pre>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            <em>Eius id nemo nulla! Explicabo quia, hic saepe nostrum distinctio dignissimos animi ipsum.</em>       Ab corporis voluptatum tempore enim alias repellat tenetur accusamus iste eos sed impedit, labore fugiat harum recusandae ut quaerat facere asperiores vero libero omnis, distinctio mollitia aut atque! <b>Doloremque vel quisquam magnam quo recusandae voluptatum odit obcaecati sequi eaque facilis tempore nobis</b>, 
+            
+            qui alias sed delectus, minus ea repellendus in! Atque nostrum perspiciatis architecto sit! 
+            
+            <br>Exercitationem laborum nam veritatis quasi tenetur placeat dolor vel nulla tempore itaque facilis quos ratione praesentium temporibus corporis, architecto est quibusdam commodi quis dicta.</pre>
+    </p>
+    <h2>
+        <em>Hello <br>Word<sup>or not</sup></em>
+    </h2>
 </body>
 </html>
