--- a/05/hw5(webpage).html
+++ b/05/hw5(webpage).html
@@ -29,34 +29,31 @@
                 <br>No more worrying
 
             </h2>
-            <section>
-                <form action="" class="mail-form">
+            <form action="" class="mail-form">
                     <input type="email" placeholder="Enter your email address">
                     <button class="button-form" type="submit">Get an invite</button>
-                </form>           
-            </section>
+            </form>           
         </div>
     </section>
     <section class="space">
         <div class="text-container">
             <h3 class="title-element">
                 Unlimited space.
-                <p class="text-content">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare
-                </p>
-                <div>
-                    
-                </div>
-                <img src="images/infinity-icon.png" alt="Infinity Logo">
             </h3>
+            <p class="text-content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare
+            </p>
+            <div class="unlimited-image-space">
+                <img src="images/infinity-icon.png" alt="Infinity Logo"> 
+            </div>
         </div>
     </section>
     <section class="mobile">
         <div class="text-container">
-            <h3>
+            <h3 class="title-element">
                 Mobile Access.
             </h3>
-            <p>
+            <p class="text-content">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
             </p>
             <img src="images/Mobile.png" alt="Large Smartphone">
@@ -64,24 +61,26 @@
         
     </section>
     <section class="share">
-        <div class="tex-container">
-            <h3>
+        <div class="text-container">
+            <h3 class="title-element"> 
                 Tell your friends.
             </h3>
-            <div class="tex-container">
+            <div class="text-content">
                 <p>
                     Want more unlimited storage? Refer more friends.
                 </p>               
             </div>
             <button class="tell-your-friends-button">
+                ...
             </button>
         </div>
     </section>
     <footer class="end">
         <div class="text-container">
             <img src="images/Logo-end.png" alt="Bottom page logo">
-            <div>
-                <a href="#">
+        </div>
+        <div class="link-block">
+            <a href="#">
                 <img src="images/X-end.png" alt="X(Twitter)">
             </a>
             <a href="#">
@@ -90,7 +89,6 @@
             <a href="#">
                 <img src="images/email-end.png" alt="Bottom email">
             </a>
-            </div>
         </div>
     </footer>
 </body>
