--- a/06/hw-menu/hw06-menu.html
+++ b/06/hw-menu/hw06-menu.html
@@ -71,7 +71,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="burger">
+                <div class="burger fish">
                     <div>
                         <img src="image/fishburger.png" alt="#">
                     </div>
